--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,13 @@
 		"axios": "^1.7.9",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
 		"framer-motion": "^11.15.0",
 		"leaflet": "^1.9.4",
 		"lucide-react": "^0.408.0",
 		"motion": "^11.15.0",
 		"react": "^19.0.0",
+		"react-calendar": "^5.1.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
 		"react-icons": "^5.4.0",
