--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
 		"@nanostores/react": "github:ai/react",
 		"@radix-ui/react-dialog": "^1.1.5",
 		"@radix-ui/react-label": "^2.1.1",
+		"@radix-ui/react-select": "^2.1.5",
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.2",
 		"ai": "^4.1.6",
