--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@googlemaps/js-api-loader": "^1.16.8",
 		"@nanostores/react": "github:ai/react",
 		"@radix-ui/react-dialog": "^1.1.5",
 		"@radix-ui/react-label": "^2.1.1",
@@ -31,6 +32,7 @@
 		"react-hook-form": "^7.54.2",
 		"react-icons": "^5.4.0",
 		"react-leaflet": "^5.0.0",
+		"react-map-gl": "^8.0.2",
 		"react-markdown": "^9.0.3",
 		"react-resizable-panels": "^2.1.7",
 		"react-router": "^6.24.1",
