--- a/nitk-chatbot/package.json
+++ b/nitk-chatbot/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,9 +13,12 @@
   "description": "",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.9.5"
+    "mongoose": "^8.9.5",
+    "mysql2": "^3.13.0",
+    "nodemon": "^3.1.9"
   }
 }
